fix user page not showing bug and adjust footer

--- a/public/app.css
+++ b/public/app.css
@@ -207,6 +207,7 @@ bottom:0;
 
  .profileFooterUser{
    position:relative;
+   margin-top:320px;
 }
  
  .profilePage{
